2007-11-12  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* include/jim.h: include file order fix; now compiles again.
	* doc/athttpd.cdl: Fixed typos in doc. Return value from handler is not 
	used, recommend returning 0 in doc.

2006-12-03  Anthony Tonizzo  <atonizzo@gmail.com>

	* cdl/httpd.cdl: Corrected a CDL error in the requirements of
	CYGOPT_NET_ATHTTPD_USE_FS

2006-11-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/httpd.cdl: Improve CDL dependencies.

2006-11-08  Anthony Tonizzo  <atonizzo@gmail.com>

	* doc/athttpd.sgml: Updated to describe lasted changes and corrected
	minor typos.
	* src/http.c: Check for "Content-Type" header. This is needed if we
	want to support parsing form variables in POST requests.
	* src/jim.c: Updated with latest release from Jim CVS.
	* src/cgi.c: streamlined cyg_httpd_exec_cgi_tcl(), now uses the 'source'
	command of tcl to execute a tcl script.
	* src/forms.c: Modified cyg_handle_method_POST so that the variables in the
	payload are scanned only if the request has a Content-Type 
	of 'application/x-www-form-urlencoded'
	* src/jim-aio.c: Added to package. Now tcl has IO functions to access a
	file system.
	* include/httpd.h: Added a new mode, CYG_HTTPD_MODE_FORM_DATA which is set
	when a POST request has a Content-Type of 
	'application/x-www-form-urlencoded'
	    
2006-10-16  Lars Povlsen  <lpovlsen@vitesse.com> and Anthony Tonizzo  <atonizzo@gmail.com>

	* cdl/httpd.cdl: add CYGOPT_NET_ATHTTPD_CLOSE_CHUNKED_CONNECTIONS. Default
	is set to CLOSE, so it is backward compatible with 
	previous versions of the browser.
	* src/socket.c: cyg_httpd_process_request() uses a loop to collect at least
	one full frame (til a header terminator is found), 
	cyg_httpd_start_chunked() only close if configured to do so.
	* src/httpd.c: Overhaul of cyg_httpd_send_error to avoid the use of
	inbuffer as temporary storage (conflicts with pipelined frames),
	removed the option to send a page after calling a C language
	handler