@@ -1,8 +1,15 @@
 2007-11-12  Oyvind Harboe  <oyvind.harboe@zylin.com>
+2007-11-12  Jonathan Larmour  <jifl@eCosCentric.com>
 
+	* doc/athttpd.sgml: added an example of a tcl script.
+	* src/http.c, forms.c: serve cgi requests before file system requests,
+	that way it isn't possible to download the actual cgi/.o script and
+	cgi works even if the http root directory is above the cgi directory.
+	* src/http.c: if only tcl cgi is enabled, cgi requests are now
+	forwarded to tcl
 	* include/jim.h: include file order fix; now compiles again.
-	* doc/athttpd.cdl: Fixed typos in doc. Return value from handler is not 
-	used, recommend returning 0 in doc.
+	* doc/athttpd.sgml: Fixed typos in doc. Return value from handler is
+	not used, recommend returning 0 in doc.
 
 2006-12-03  Anthony Tonizzo  <atonizzo@gmail.com>
 
